--- a/index.html
+++ b/index.html
@@ -25,153 +25,129 @@
 <body>
 	<div class="wrapper">
 		<header id="header" class="header">
-	<div class="header__container container">
-
+	<div class="container">
 		<div class="header__row d-flex">
-
-			<a href="#" class="header__logo logo-icon">
-				<p>
-					ВЛАДИСЛАВ
-					ПЕНЗИН
-				</p>
-				<span>практикующий психолог</span>
-			</a>
-
-			<div class="header__nav-block">
-				<div class="header__menu menu">
-					<nav class="menu__body">
-						<ul class="menu__list sibling-fade d-flex">
-							<li><a href="#" class="menu__link">Обо мне</a></li>
-							<li><a href="#" class="menu__link">Услуги</a></li>
-							<li><a href="#" class="menu__link">Вопрос ответ</a></li>
-							<li><a href="#" class="menu__link">Статьи и публикации</a></li>
-							<li><a href="#" class="menu__link">Контакты</a></li>
-						</ul>
-					</nav>
-					<nav class="mob-menu">
-						<ul class="mob-menu__list">
-							<li><a href="#" class="menu__link">Обо мне</a></li>
-							<li><a href="#" class="menu__link">Услуги</a></li>
-							<li><a href="#" class="menu__link">Вопрос ответ</a></li>
-							<li><a href="#" class="menu__link">Статьи и публикации</a></li>
-							<li><a href="#" class="menu__link">Контакты</a></li>
-						</ul>
-					</nav>
-				</div>
-
-				<div class="header__callback d-flex">
-					<a href="tel:84951700000">8 (495) 170-00-00</a>
-					<p>Звонить с 08:00 до 22:00</p>
-				</div>
-				<a href="tel:84951700000" class="mob-callback__phone"></a>
-
-				<div class="menu__icon icon-menu">
-					<span></span>
-					<span></span>
-					<span></span>
-				</div>
-			</div>
-
+			<a href="#" class="header__logo logo-icon"></a>
+			<p class="header__text">
+				Маршрутный <br>
+				лист
+			</p>
 		</div>
-
 	</div>
 </header>
 
 		<main class="page">
-			<section id="about" class="about">
-				<div class="container">
-					<!-- 				<form class="header__form" action="#">
-					<input type="text" name="name" placeholder="Имя" class="input">
-					<input type="email" name="email" placeholder="e-mail" class="input__phone">
-					<input type="tel" name="tel" placeholder="Телефон" class="input__phone">
-					<button type="submit" class="form__btn btn">Жду звонка</button>
-					<p>
-						Нажимая на кнопку "Позвоните мне" я даю свое
-						согласие на обработку персональных данных и
-						принимаю условия соглашения
-					</p>
-				</form> -->
+			<section id="tables" class="tables">
+				<div class="tables__block">
+
+					<div class="tables__string">
+						<div class="tables__container container">
+							<div class="tables__cell">Номенклатура:</div>
+							<div class="tables__cell">ГОСТ</div>
+						</div>
+					</div>
+
+					<div class="tables__string">
+						<div class="tables__container container">
+							<div class="tables__cell">Спецификация:</div>
+							<div class="tables__cell">ГОСТ 6286-73</div>
+						</div>
+					</div>
+
+					<div class="tables__string">
+						<div class="tables__container container">
+							<div class="tables__cell">Расчетный срок:</div>
+							<div class="tables__cell">30.12.2021</div>
+						</div>
+					</div>
+
+					<div class="tables__string">
+						<div class="tables__container container">
+							<div class="tables__cell">№ бухты:</div>
+							<div class="tables__cell">11-ТК-2133</div>
+						</div>
+					</div>
+
+					<div class="tables__string">
+						<div class="tables__container container">
+							<div class="tables__cell">Клиент:</div>
+							<div class="tables__cell">ООО "Рога и копыта"</div>
+						</div>
+					</div>
+
+					<div class="tables__string">
+						<div class="tables__container container">
+							<div class="tables__cell">Плановый срок:</div>
+							<div class="tables__cell">11.12.2021</div>
+						</div>
+					</div>
+
+					<div class="tables__string">
+						<div class="tables__container container">
+							<div class="tables__cell">№ заказа:</div>
+							<div class="tables__cell">45-ТР-444</div>
+						</div>
+					</div>
+
+					<div class="tables__string">
+						<div class="tables__container big container">
+							<div class="tables__cell">Примечание:</div>
+							<div class="tables__cell">СРОЧНО!</div>
+						</div>
+					</div>
+
 				</div>
 			</section>
 
-			<section id="about" class="about">
+			<section id="operation" class="operation">
 				<div class="container">
 
-				</div>
-			</section>
+					<div class="operation__item-block">
+						<div class="operation__item-title">
+							<h2>Операция № 1 / РЦ 0</h2>
+						</div>
+						<div class="operation__tables">
+							<div class="operation__string d-flex">
+								<div class="operation__cell">Начало</div>
+								<div class="operation__cell">Конец</div>
+								<div class="operation__cell">Фактически</div>
+							</div>
+							<div class="operation__string c-red d-flex">
+								<div class="operation__cell">30.12.2021</div>
+								<div class="operation__cell">30.12.2021</div>
+								<div class="operation__cell">30.12.2021</div>
+							</div>
+						</div>
+						<div class="operation__check-blok">
+							<a href="#" class="operation__check-icon"></a>
+						</div>
+					</div>
 
-			<section id="about" class="about">
-				<div class="container">
-
-				</div>
-			</section>
-
-			<section id="about" class="about">
-				<div class="container">
-
-				</div>
-			</section>
-
-			<section id="about" class="about">
-				<div class="container">
+					<div class="operation__item-block">
+						<div class="operation__item-title">
+							<h2>Операция № 1 / РЦ 1</h2>
+						</div>
+						<div class="operation__tables">
+							<div class="operation__string d-flex">
+								<div class="operation__cell">Начало</div>
+								<div class="operation__cell">Конец</div>
+								<div class="operation__cell">Фактически</div>
+							</div>
+							<div class="operation__string c-red d-flex">
+								<div class="operation__cell">30.12.2021</div>
+								<div class="operation__cell">30.12.2021</div>
+								<div class="operation__cell">-</div>
+							</div>
+						</div>
+						<div class="operation__check-blok">
+							<button class="btn">Фиксировать</button>
+						</div>
+					</div>
 
 				</div>
 			</section>
 		</main>
-		<footer id="footer" class="footer">
-	<div class='footer__container container'>
-		<div class="footer__row d-flex">
-
-			<a href="#" class="header__logo logo-icon">
-				<p>
-					ВЛАДИСЛАВ
-					ПЕНЗИН
-				</p>
-				<span>практикующий психолог</span>
-			</a>
-
-			<ul class="footer__menu">
-				<li><a href="#" class="menu__link">Обо мне</a></li>
-				<li><a href="#" class="menu__link">Услуги</a></li>
-				<li><a href="#" class="menu__link">Вопрос ответ</a></li>
-				<li><a href="#" class="menu__link">Статьи и публикации</a></li>
-				<li><a href="#" class="menu__link">Видеоматериалы</a></li>
-				<li><a href="#" class="menu__link">Контакты</a></li>
-			</ul>
-
-			<div class="footer__contact">
-				<div class="header__callback d-flex">
-					<a href="tel:84951700000">8 (495) 170-00-00</a>
-					<p>Звонить с 08:00 до 22:00</p>
-				</div>
-
-				<a href="#" class="footer__link-social">Социальные сети</a>
-
-				<p class="footer__policy">
-					Заполняя и отправляя данную форму Вы соглашаетесь <br>
-					с условиями политики конфиденциальности и <br>
-					обработки персональных данных
-				</p>
-			</div>
-
-			<form class="footer__form" action="#">
-				<h3>Форма обратной связи</h3>
-				<input type="text" name="name" placeholder="Ваше имя*" class="footer__form-input input">
-				<input type="tel" name="tel" placeholder="Ваш телефон*" class="footer__form-input input">
-				<button type="submit" class="footer__form-btn btn">Записаться на прием</button>
-			</form>
-
-		</div>
 	</div>
-</footer>
-	</div>
-	<!-- Подключаем Popup здесь -->
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-<!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script> -->
-<!-- <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script> -->
-<script src="js/vendors.js"></script>
-<script src="js/main.js"></script>
-<script src="js/custom.js" ></script> 
 
 </body>
 
